[package]
name = "nta"
version = "0.1.0"
edition = "2021"
authors = ["Roman A. Voronkin"]

[dependencies]
chrono = {version = "^0.4", features = ["serde"]}
clap = {version = "^3.2", features = ["derive"]}
env_logger = {version = "^0.9"}
futures = {version = "^0.3"}
log = {version = "^0.4"}
prettytable-rs = {version = "^0.8"}
regex = {version = "^1.6"}
reqwest = {version = "^0.11", features = ["json"]}
scraper = {version = "^0.13"}
serde = {version="^1", features = ["derive"]}
thiserror = {version = "^1"}
tokio = {version = "^1.18", features = ["full"]}
url = {version = "^2"}
uuid = {version = "^1", features = ["v4", "fast-rng"]}
walkdir = {version = "^2"}
