[package]
name = "nta"
version = "0.1.1"
edition = "2021"
authors = ["Roman A. Voronkin"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = {version = "^4.0", features = ["derive"]}
directories = "^4"
fern = "^0.6"
futures = "^0.3"
html2md = "^0.2"
log = "^0.4"
prettytable-rs = "^0.9"
regex = "^1.6"
reqwest = {version = "^0.11", features = ["json"]}
scraper = "^0.14"
serde = {version="^1", features = ["derive"]}
thiserror = "^1"
tokio = {version = "^1.18", features = ["full"]}
toml = "^0.5"
url = "^2"
uuid = {version = "^1", features = ["v4", "fast-rng"]}
walkdir = "^2"
