[package]
name = "pkbassist"
version = "0.1.4"
edition = "2021"
authors = ["Roman A. Voronkin"]

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
clap = {version = "^4.0", features = ["derive"]}
directories = "^5"
fern = "^0.6"
futures = "^0.3"
handlebars = "^4.3"
html2md = "^0.2"
log = "^0.4"
prettytable-rs = "^0.10"
regex = "^1.6"
reqwest = {version = "^0.11", features = ["json"]}
scraper = "^0.16"
serde = {version="^1", features = ["derive"]}
thiserror = "^1"
tokio = {version = "^1.18", features = ["full"]}
toml = "^0.7"
url = "^2"
uuid = {version = "^1", features = ["v4", "fast-rng"]}
walkdir = "^2"
yaml-rust = "^0.4"
